Add idea files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,14 @@ tmp/
 hs_err_pid*
 image_result.png
 image_source.png
+
+# IntelliJ
+*.iml
+.idea/compiler.xml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/copyright/*
+.idea/libraries/*
